tests/examples/good/garbage_collector/good017.lat
int main() {
    A a = new A;
    a.s = "hej";
    a.s = a.s + a.s + a.s;
    a.f();
    return 0;
}

class A {
    int a;
    string s;
    void f() {
        s = "hello";
        s = s + s;
        s = s + s + s;
        printString(s);
    }
}