tests/examples/bad/class_member_method_not_exists.lat
int main() {
    A var;
    var.f();
    return 1;
}

class A {
    int a;
}

